[package]
name = "terminar-core"
version = "0.1.0"
edition = "2024"
description = "Core PTY session engine for terminar"

[dependencies]
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
portable-pty = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
anyhow = "1.0"
zstd = "0.13"
tempfile = "3.0"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "term"] }
